--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
@@ -108,6 +108,7 @@
         var Messages        = JSONstring.toObject(responseText);
         setMessages(Messages);
         mostrarTabla();
+        eleccionDeEjemplar();
     }
 </script>
 <fieldset>
