Nueva zebra para listas???

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
@@ -2,7 +2,7 @@
 		
 		    $(document).ready(function(){
 		        checkedAll("select_all"+"[% id2 %]", "checkEjemplares"+"[% id2 %]");
-		
+                zebra("tablaResult");
 		    });
 		
 		</script>
