--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
@@ -2,7 +2,7 @@
 		
 		    $(document).ready(function(){
 		        checkedAll("select_all"+"[% id2 %]", "checkEjemplares"+"[% id2 %]");
-                zebra("tablaResult");
+                zebra("ejemplaresDelGrupo[% id2 %]");
 		    });
 		
 		</script>
@@ -25,3 +25,4 @@
 		    </div> <!--end <div id="ejemplaresDelGrupo -->
 		</fieldset>
 		<script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
+  
