--- a/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
@@ -4729,6 +4729,10 @@ tr.impar {
 background-color:#E7F3FA;
 }
 
+li.impar {
+background-color:#E7F3FA;
+}
+
 /*hover de las tablas con checkbox*/
 .impar:hover {
     background:         #5C82B5;
