--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
@@ -2,14 +2,14 @@
 		
 		    $(document).ready(function(){
 		        checkedAll("select_all"+"[% id2 %]", "checkEjemplares"+"[% id2 %]");
-                zebra("ejemplaresDelGrupo[% id2 %]");
+                zebraList("analiticasDelGrupo[% id2 %]");
 		    });
 		
 		</script>
 		
 		<fieldset>
 		    <legend class="trigger trigger_2_[% id2 %] click">[% "Anal&iacute;ticas del grupo" | i18n %] [% id2 %]</legend>
-		    <div id="ejemplaresDelGrupo[% id2 %]" class="ejemplaresDelGrupo[% id2 %]" >
+		    <div id="ejemplaresDelGrupo[% id2 %]" class="analiticasDelGrupo[% id2 %]" >
                     <ul class="listado_sin_margen">
                         [% FOREACH nivel1_analiticas_array %]
                             [% FOREACH nivel1_analitica %]
