--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/libre_deuda.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/libre_deuda.tmpl
@@ -28,11 +28,11 @@
    
     </div>   
     <div id="pie" style="clear:both; font-size:9px">
-    <hr>
+   <br> <hr>
               [% "Biblioteca: " | i18n  %] [% biblio.getNombrePDF %]<br>
               [% "Direcci&oacute;n:" | i18n  %]  [% biblio.getDireccionPDF %]<br>
               [% "Tel/Fax:" | i18n  %]  [% biblio.telefono %]  [% IF biblio.fax %] / [% biblio.fax %][% END %]  <br>
-              [% "Atenci&oacute;n: Lunes a Viernes " | i18n  %][% atencion %] <br>
+           <!--   [% "Atenci&oacute;n: Lunes a Viernes " | i18n  %][% atencion %] <br>--!>
               [% "E-mail:" | i18n  %] [% biblio.email %]<br>
     </div>
 </fieldset>
