[CHANGELOG] Ahora se pueden cambiar las credenciales de un socio

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -57,7 +57,7 @@
             [% END %]
 </legend>
 
-<form method=post  name="userDataForm" id="userDataForm" class="classform ">
+<form method="post"  name="userDataForm" id="userDataForm" class="classform">
     <fieldset>
     <legend class="titulo_legend">[% "Datos personales del usuario" | i18n %]</legend>
     <ul>
