--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -2,12 +2,14 @@
 <head>
   <meta http-equiv="Content-Tipo" content="text/html; charset=UTF-8">
 </head>
-<body onload="javascript:window.print();window.close();">-->
+<body onload="javascript:window.print();window.close();">
 
 <!--LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
 
+
+
 [% FOREACH comprobantes %]
-    <div id="comprob">
+    <div class="comprob">
         <p >PR&Eacute;STAMO - RENOVACI&Oacute;N</p>
         <table>
             <tbody> 
@@ -155,8 +157,10 @@
                           &nbsp;
                       </td>
                   </tr>
+                  
                 </tbody>
               </table>
+       
     </div>
             
 [% END %]
