--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -162,7 +162,7 @@
               </table>
        
     </div>
-            
+    <!-- PAGE BREAK -->    
 [% END %]
 
 <!-- AGREGADO HASTA ACA -->
